--- a/IPAddressRange/IPAddressRange.nuspec
+++ b/IPAddressRange/IPAddressRange.nuspec
@@ -6,7 +6,7 @@
     <version>$version$</version>
     <authors>$authors$</authors>
     <owners>$authors$</owners>
-    <licenseUrl>$licenseUrl$</licenseUrl>
+    <license type="expression">$licenseExpression$</license>
     <projectUrl>$projectUrl$</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>$summary$</summary>
