--- a/IPAddressRange/IPAddressRange.csproj
+++ b/IPAddressRange/IPAddressRange.csproj
@@ -20,8 +20,8 @@
     <Authors>J.Sakamoto</Authors>
     <Company />
     <Product>IPAddressRange</Product>
-    <Summary>This library allows you to parse range of IP address string, and can conatins check.</Summary>
-    <Description>This library allows you to parse range of IP address string such as "192.168.0.0/24" and "192.168.0.0/255.255.255.0" and "192.168.0.0-192.168.0.255", and can conatins check. This library supports both IPv4 and IPv6.</Description>
+    <Summary>This library allows you to parse range of IP address string, and can contains check.</Summary>
+    <Description>This library allows you to parse range of IP address string such as "192.168.0.0/24" and "192.168.0.0/255.255.255.0" and "192.168.0.0-192.168.0.255", and can contains check. This library supports both IPv4 and IPv6.</Description>
     <PackageLicenseExpression>MPL-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/jsakamoto/ipaddressrange/</PackageProjectUrl>
     <PackageReleaseNotes>v.4.0.0
