Split previous version implements into individual class library project.

--- a/IPAddressRange.Benchmark/IPAddressRange.Benchmark.csproj
+++ b/IPAddressRange.Benchmark/IPAddressRange.Benchmark.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IPAddressRange.PrevVersion\IPAddressRange.PrevVersion.csproj" />
     <ProjectReference Include="..\IPAddressRange\IPAddressRange.csproj" />
   </ItemGroup>
 
