--- a/IPAddressRange/IPAddressRange.csproj
+++ b/IPAddressRange/IPAddressRange.csproj
@@ -48,7 +48,15 @@
     <PropertyGroup>
       <NuspecFile>IPAddressRange.Signed.nuspec</NuspecFile>
       <TitleForSignedEdition>[Superseded] IPAddressRange.Signed</TitleForSignedEdition>
-      <DescriptionForSignedEdition>[Superseded] This package became  only metadata package for installing "IPAddressRange" NuGet package, because "IPAddressRange" NuGet package became strong-named assembly.&#x0A;&#x0D;Please consider to installing "IPAddress" NuGet package directly instead of this package.&#x0A;&#x0D;----------------------------&#x0A;&#x0D;$(Description)</DescriptionForSignedEdition>
+      <DescriptionForSignedEdition>
+        [Superseded] This package became  only metadata package for installing "IPAddressRange" NuGet package, because "IPAddressRange" NuGet package became strong-named assembly.
+
+        Please consider to installing "IPAddress" NuGet package directly instead of this package.
+
+        ----------------------------
+
+        $(Description)
+      </DescriptionForSignedEdition>
       <NuspecProperties>title=$(TitleForSignedEdition);$(SharedNuspecProperties)</NuspecProperties>
       <NuspecProperties>description=$(DescriptionForSignedEdition);$(NuspecProperties)</NuspecProperties>
     </PropertyGroup>
