--- a/IPAddressRange/IPAddressRange.csproj
+++ b/IPAddressRange/IPAddressRange.csproj
@@ -15,8 +15,8 @@
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <NuspecFile>IPAddressRange.nuspec</NuspecFile>
-    <Copyright>Copyright © 2012-2019 J.Sakamoto, Mozilla Public License 2.0</Copyright>
-    <Version>4.0.0.0</Version>
+    <Copyright>Copyright © 2012-2020 J.Sakamoto, Mozilla Public License 2.0</Copyright>
+    <Version>4.1.0.0-preview1</Version>
     <Authors>J.Sakamoto</Authors>
     <Company />
     <Product>IPAddressRange</Product>
@@ -74,6 +74,7 @@
     <PropertyGroup>
       <PackageReleaseNotes>@(ReleaseNoteLines, '%0a')</PackageReleaseNotes>
       <PackageReleaseNotes>$([System.Text.RegularExpressions.Regex]::Match($(PackageReleaseNotes), "^(v\.[\d\.]+.+?)v\.[\d\.]+", System.Text.RegularExpressions.RegexOptions.Singleline).Groups[1].Value)</PackageReleaseNotes>
+      <NuspecProperties>releaseNotes=$(PackageReleaseNotes);$(NuspecProperties)</NuspecProperties>
       <SharedNuspecProperties>releaseNotes=$(PackageReleaseNotes);$(SharedNuspecProperties)</SharedNuspecProperties>
     </PropertyGroup>
   </Target>
