--- a/IPAddressRange.Test/IPAddressRange.Test.csproj
+++ b/IPAddressRange.Test/IPAddressRange.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net462</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0;net462</TargetFrameworks>
     <LangVersion>7.0</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
