--- a/IPAddressRange/IPAddressRange.nuspec
+++ b/IPAddressRange/IPAddressRange.nuspec
@@ -19,8 +19,13 @@
     <copyright>$copyright$</copyright>
     <tags>$tags$</tags>
     <icon>nupkg-icon.png</icon>
+    <readme>README.md</readme>
     <dependencies>
-      <group targetFramework=".NETFramework4.5.2" />
+      <group targetFramework="net5.0" />
+      <group targetFramework="net6.0" />
+      <group targetFramework="net7.0" />
+      <group targetFramework="net8.0" />
+      <group targetFramework=".NETFramework4.6.2" />
       <group targetFramework=".NETStandard1.4">
         <dependency id="NETStandard.Library" version="1.6.1" exclude="Build,Analyzers" />
       </group>
@@ -29,12 +34,29 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\net452\IPAddressRange.dll" target="lib\net452" />
-    <file src="bin\Release\net452\IPAddressRange.XML" target="lib\net452" />
+
+    <file src="bin\Release\net5.0\IPAddressRange.dll" target="lib\net5.0" />
+    <file src="bin\Release\net5.0\IPAddressRange.XML" target="lib\net5.0" />
+
+    <file src="bin\Release\net6.0\IPAddressRange.dll" target="lib\net6.0" />
+    <file src="bin\Release\net6.0\IPAddressRange.XML" target="lib\net6.0" />
+
+    <file src="bin\Release\net7.0\IPAddressRange.dll" target="lib\net7.0" />
+    <file src="bin\Release\net7.0\IPAddressRange.XML" target="lib\net7.0" />
+
+    <file src="bin\Release\net8.0\IPAddressRange.dll" target="lib\net8.0" />
+    <file src="bin\Release\net8.0\IPAddressRange.XML" target="lib\net8.0" />
+    
+    <file src="bin\Release\net462\IPAddressRange.dll" target="lib\net462" />
+    <file src="bin\Release\net462\IPAddressRange.XML" target="lib\net462" />
+
     <file src="bin\Release\netstandard1.4\IPAddressRange.dll" target="lib\netstandard1.4" />
     <file src="bin\Release\netstandard1.4\IPAddressRange.XML" target="lib\netstandard1.4" />
+    
     <file src="bin\Release\netstandard2.1\IPAddressRange.dll" target="lib\netstandard2.1" />
     <file src="bin\Release\netstandard2.1\IPAddressRange.XML" target="lib\netstandard2.1" />
+
     <file src="..\.assets\nupkg-icon.png" target="nupkg-icon.png" />
+    <file src="..\README.md" target="README.md" />
   </files>
 </package>
